# kondo-movie

./: .gitignore  DATABASE_ABSTRACTION_SUMMARY.md  Dockerfile  README.md  docker-compose.prod-db.yml  docker-compose.yml  pyproject.toml  test_scraper_engines.py
adr/: ADR-001-video-asset-naming-conventions.md  ADR-002-google-video-intelligence-integration.md  ADR-003-test-documentation-standards.md  ADR-004-classification-refactoring-and-organization.md  ADR-005-STORAGE_MIGRATION_GUIDE.md
playground/: db_player.py  image.py  mail.py  movie.py  movie_maker_client.py  property_client.py  shorturl.py  soundtracks.py  stytch_tester.py  vision.py  voices.py  whoami.py
playground/property/: coldwell.py  property.json
references/: docker-app-log.txt
scripts/: docker-network.sh  run_local_app_with_cloud_db.sh  validate_prod_db_connection.py
src/: alembic.ini  logger.py  main.py  storage_manager.py
src/account/: account_actions.py  account_actions_model.py  account_model.py  authentication.py  jwt_manager.py  stytch_manager.py
src/ai/: image_analyzer.py  line_splitter.py  script_manager.py  (+2 more)
tests/: test_api_endpoint.py  test_beverly_hills.py  test_compass_exact_matching.py  test_corcoran_url_validation.py  test_daniel_gale.py  test_daniel_gale_enhanced.py  test_daniel_gale_images.py  test_download_timeout.py  test_mixed_media_upload_flow.py  test_property_title_enum.py  test_property_title_flow.py  test_property_title_integration.py  test_scrapfly_integration.py  test_signature_expiry_fix.py  test_street_abbreviations.py  test_tenant_engines.py  test_user_search.py
(+153 files in other folders)
